--- a/config_files/nearRT-RIC/gnb_zmq.yaml
+++ b/config_files/nearRT-RIC/gnb_zmq.yaml
@@ -35,11 +35,11 @@ log:
   filename: /tmp/gnb.log            # Path of the log file.
   all_level: info                   # Logging level applied to all layers.
   hex_max_size: 0
-
+  tracing_filename: /tmp/gnb_trace.log
 pcap:
-  mac_enable: false                 # Set to true to enable MAC-layer PCAPs.
+  mac_enable: true                 # Set to true to enable MAC-layer PCAPs.
   mac_filename: /tmp/gnb_mac.pcap   # Path where the MAC PCAP is stored.
-  ngap_enable: false                # Set to true to enable NGAP PCAPs.
+  ngap_enable: true                # Set to true to enable NGAP PCAPs.
   ngap_filename: /tmp/gnb_ngap.pcap # Path where the NGAP PCAP is stored.
   e2ap_enable: true                 # Set to true to enable E2AP PCAPs.
   e2ap_filename: /tmp/gnb_e2ap.pcap # Path where the E2AP PCAP is stored.
@@ -48,9 +48,13 @@ e2:
   enable_du_e2: true                # Enable DU E2 agent (one for each DU instance)
   e2sm_kpm_enabled: true            # Enable KPM service module
   addr: 127.0.0.1                   # RIC IP address
-  #bind_addr: 127.0.0.100           # A local IP that the E2 agent binds to for traffic from the RIC. ONLY required if running the RIC on a separate machine. 
+  # bind_addr: 127.0.0.100           # A local IP that the E2 agent binds to for traffic from the RIC. ONLY required if running the RIC on a separate machine. 
   port: 36421                       # RIC port
 
-metrics: 
+metrics:
   rlc_json_enable: 1                # Enable RLC metrics reporting (need to deliver measurements to E2SM_KPM service model)
   rlc_report_period: 1000           # Set reporting period to 1s
+# grafana enable
+  enable_json_metrics: true       # Enable reporting metrics in JSON format
+  addr: 172.19.1.4                # Metrics-server IP
+  port: 55555                     # Metrics-server Port
