--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 log_271123_failedSetPDUSession/
 log/
+current work.md/
+tested_result_wait_to_put_on_readme.md/
+
+package-lock.json/
+package.json/
+node_modules/
