--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 log_271123_failedSetPDUSession/
 log/
-current work.md/
-tested_result_wait_to_put_on_readme.md/
+/current_work
 
-package-lock.json/
-package.json/
-node_modules/
+/package?.json
+/node_modules
