--- a/config_files/usrp/gnb/gnb_fllay3.yml
+++ b/config_files/usrp/gnb/gnb_fllay3.yml
@@ -11,18 +11,27 @@ ru_sdr:
   # clock: internal                                                       # Specify the clock source used by the RF.
   # sync: internal                                                        # Specify the sync source used by the RF.
   srate: 23.04                                                  # RF sample rate might need to be adjusted according to selected bandwidth.
+  # srate: 30.72
+  # srate: 46.08
   otw_format: sc12
-  tx_gain: 89                                                  # Transmit gain of the RF might need to adjusted to the given situation.
-  rx_gain: 60                                                   # Receive gain of the RF might need to adjusted to the given situation.
+  # tx_gain: 20                                                  # Transmit gain of the RF might need to adjusted to the given situation.
+  # tx_gain: 70
+  tx_gain: 89
+  # rx_gain: 15                                                   # Receive gain of the RF might need to adjusted to the given situation.
+  rx_gain: 60
 
 cell_cfg:
   dl_arfcn: 627340                                                # ARFCN of the downlink carrier (center frequency).
   band: 78                                                        # The NR band.
-  channel_bandwidth_MHz: 20                                       # Bandwith in MHz. Number of PRBs will be automatically derived.
+  channel_bandwidth_MHz: 20                                       # @1mm- Bandwith in MHz. Number of PRBs will be automatically derived.
+  # channel_bandwidth_MHz: 40
   common_scs: 30                                                  # Subcarrier spacing in kHz used for data.
   plmn: "90170"                                                   # PLMN broadcasted by the gNB.
   tac: 7                                                          # Tracking area code (needs to match the core configuration).
   pci: 1                                                          # Physical cell ID.
+
+# pdsch:
+     # mcs_table: qam256  					# @1mm - Use QAM256 MCS table in downlink
 
 log:
   filename: /tmp/gnb.log                                          # Path of the log file.
